package com.reconnect.mindhealth.modules.auth.dto;

public class ForgotPasswordRequestDto {
    private String email;

    public String getEmail() {
        return email;
    }

    public void setEmail(String email) {
        this.email = email;
    }
}
