package com.reconnect.mindhealth.modules.auth.enums;

public enum Role {
    GUEST,
    PATIENT,
    THERAPIST,
    ADMIN
}
